2008-09-16  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinycompile.el (tinycompile-kill-all-file-lines):
	Handle read-only compile buffer correctly by using
	`with-buffer-modified'

	* tiny/tinylib.el (ti::buffer-parse-line-main): Do not strip
	leading ./ or ../ but return path as it.
	(ti::buffer-parse-grep-line): Use `match-string-no-properties'.

2008-09-15  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinydesk.el (tinydesk-:save-title): Remove `concat'
	to make eval form simpler to edit.
	(top level): Checkdoc style check: problems fixed.

2008-09-05  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinydesk.el (tinydesk-install-default-keybindings):
	Renamed. Was `tinydesk-default-emacs-keybindings'

2008-09-02  Jari Aalto  <jari.aalto@cante.net>

	* tinylisp.el (tinylisp-library-locate-library-1):
	Improve docstring (Return value part). Make faster by
	moving `file-name-nondirectory' out of loops.

	* tinylisp.el (tinylisp-jump-to-definition): Support
	compressed .el.gz files

	* tinydesk.el (tinydesk-:save-exclude-regexp): Add
	GNUS files.

	* tiny/tinyreplace.el (tinyreplace-interactive-region-args):
	Remove `barf-if-buffer-read-only'. Emacs 22.x compile buffer
	is read only.

2008-08-21  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinylisp.el (tinylisp-autoload-generate-library): Support
	compressed .el files. Emacs 22.x fix.

	* tiny/tinyliba.el (top level): Call `ti::tmp-cl-library-check'
	only for Emacs 21.x and lower.
	(vc-hooks): Updated autoloads for Emacs 22.x

2008-08-11  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinycygwin.el
	(top level): require message.el
	(tinycygwin-file-buffer): Use
	`insert-file-contents-literally'.
	(tinycygwin-package-wnpp-main): Correct `if'.
	(eval-when-compile): require message.el
	(eval-and-compile): autoload `message-fetch-field'.
	(tinycygwin-font-lock-keywords): Fix `cond' daemon.log.
	(tinycygwin-bug-report-batch-setup-general): Remove variable
	`resize-minibuffer-mode'
